examples/invalid/45_leading_double_colon_effect_operation_call.lane
module Examples.Invalid45

effect Console {
  read() -> Int
}

fn answer() -> Int ! Console {
  ::read!()
}
